--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,7 @@
 	"editor.formatOnSave": true,
 	"prettier.singleQuote": true,
 	"frontMatter.preview.host": "http://localhost:5173/",
-	"frontMatter.framework.startCommand": "npm run dev",
+	"frontMatter.framework.startCommand": "pnpm run dev",
 	"frontMatter.content.autoUpdateDate": false,
 	"frontMatter.content.fmHighlight": true,
 	"frontMatter.content.publicFolder": "static",
